--- a/RA2111003011556cafe.html
+++ b/RA2111003011556cafe.html
@@ -3,7 +3,7 @@
 <head>
 <title>Bhavika's Cafe Menu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<link href="styles.css" rel="stylesheet" type="text/css"/>
+<link href="RA2111003011556cafe.css" rel="stylesheet" type="text/css"/>
 
 <!-- Include the JavaScript code for processing the XML data -->
 <script src="JoesCafeCode.js">
